--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "expo": "~52.0.33",
+    "expo": "~52.0.38",
     "expo-build-properties": "^0.13.2",
-    "expo-camera": "~16.0.17",
+    "expo-camera": "~16.0.18",
     "expo-file-system": "~18.0.11",
     "expo-image": "~2.0.6",
     "expo-mail-composer": "~14.0.2",
@@ -33,12 +33,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
     "react-native-public-ip": "^1.0.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-safe-area-context": "~4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13"
   },
