--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
+    "FormData": "^0.10.1",
     "pg": "^8.13.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
