--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CS3301GroupProject",
-    "slug": "CS3301GroupProject",
+    "name": "fwm-app",
+    "slug": "fwm-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
