--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
-backend/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Expo
 .expo/
 dist/
 web-build/
-expo-env.d.ts
 
 # Native
 *.orig.*
@@ -21,7 +20,7 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
-# debug
+# Debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
@@ -32,11 +31,52 @@ yarn-error.*
 
 # local env files
 .env
-.env*.local
+.env.local
+.env.production.local
+.env.test.local
 
-# typescript
-*.tsbuildinfo
+# Temporary folders
+tmp/
+temp/
 
-# packages
-package.json
-package-lock.json
+# Logs
+logs
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+Thumbs.db
+
+# React Native
+# Build generated
+android/app/build/
+ios/build/
+*.hprof
+
+# Bundle artifacts
+*.jsbundle
+
+# CocoaPods (iOS)
+ios/Pods/
+ios/Podfile.lock
+
+# Fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+
+# Sensitive configuration files
+config/secrets.js
+config/api-keys.js
+/config
+
+# Any files containing API keys, passwords, or sensitive data
+**/secrets.*
+**/config/production.*
+**/*-secret.*
