--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Copy this file to .env and fill in your values
-EXPO_PUBLIC_API_URL=https://your-backend-url.vercel.app
+EXPO_PUBLIC_API_URL=https://your-backend-url
