--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/ngrok": "^4.1.3",
     "@google/generative-ai": "^0.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -21,28 +21,28 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "expo": "~52.0.38",
-    "expo-build-properties": "^0.13.2",
-    "expo-camera": "~16.0.18",
-    "expo-file-system": "~18.0.11",
-    "expo-image": "~2.0.6",
-    "expo-mail-composer": "~14.0.2",
-    "expo-sharing": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.20",
+    "expo-build-properties": "^0.14.8",
+    "expo-camera": "~16.1.11",
+    "expo-file-system": "~18.1.11",
+    "expo-image": "~2.4.0",
+    "expo-mail-composer": "~14.1.5",
+    "expo-sharing": "~13.1.5",
+    "expo-status-bar": "~2.2.3",
     "express": "^4.21.2",
     "FormData": "^0.10.1",
     "pg": "^8.13.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "6.5.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "^6.7.1",
     "react-native-public-ip": "^1.0.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
