--- a/app.json
+++ b/app.json
@@ -8,14 +8,14 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.fwmapp"
+      "bundleIdentifier": "com.sami.hat.fwmapp"
     },
     "android": {
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.CAMERA"
       ],
-      "package": "com.anonymous.fwmapp"
+      "package": "com.sami.hat.fwmapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
