--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
