--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "expo-image": "~2.4.0",
     "expo-insights": "^0.9.3",
     "expo-mail-composer": "~14.1.5",
+    "expo-media-library": "~17.1.7",
     "expo-secure-store": "~14.2.3",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.10",
     "express": "^4.21.2",
     "FormData": "^0.10.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -49,8 +51,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "^0.20.0",
-    "expo-media-library": "~17.1.7"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
