--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/ngrok": "^4.1.3",
     "@google/generative-ai": "^0.24.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -51,7 +51,10 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-notifications": "~0.31.4",
+    "expo-device": "~7.1.4",
+    "expo-constants": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
