--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo-auth-session": "~6.2.1",
     "expo-build-properties": "^0.14.8",
     "expo-camera": "~16.1.11",
+    "expo-constants": "~17.1.7",
+    "expo-device": "~7.1.4",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
     "expo-insights": "^0.9.3",
@@ -51,10 +53,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
-    "react-native-web": "^0.20.0",
-    "expo-notifications": "~0.31.4",
-    "expo-device": "~7.1.4",
-    "expo-constants": "~17.1.7"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
