--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "concurrently": "^9.1.2",
-    "expo-module-scripts": "^4.1.9"
+    "expo-module-scripts": "^4.1.9",
+    "prettier": "3.6.2"
   },
   "private": true
 }
