--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/ngrok": "^4.1.3",
     "@google/generative-ai": "^0.24.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -28,6 +28,7 @@
     "expo-build-properties": "^0.14.8",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-device": "~7.1.4",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
@@ -38,6 +39,7 @@
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.10",
+    "expo-web-browser": "~14.2.0",
     "express": "^4.21.2",
     "FormData": "^0.10.1",
     "node-fetch": "^3.3.2",
@@ -53,6 +55,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.5",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
