--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "expo": "^53.0.20",
     "expo-auth-session": "~6.2.1",
     "expo-build-properties": "^0.14.8",
