--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -31,6 +30,7 @@
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-file-system": "~18.1.11",
     "expo-image": "~2.4.0",
