--- a/package.json
+++ b/package.json
@@ -1,69 +1,41 @@
 {
-  "name": "fwm-app",
+  "name": "shelfie",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"expo start\"",
-    "backend": "node backend/server.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build:dev:android": "eas build --profile development --platform android",
+    "build:dev:ios": "eas build --profile development --platform ios"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
-    "@expo/ngrok": "^4.1.3",
-    "@google/generative-ai": "^0.24.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "expo": "^53.0.20",
-    "expo-auth-session": "~6.2.1",
-    "expo-build-properties": "^0.14.8",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-file-system": "~18.1.11",
-    "expo-image": "~2.4.0",
-    "expo-insights": "^0.9.3",
-    "expo-mail-composer": "~14.1.5",
-    "expo-media-library": "~17.1.7",
-    "expo-secure-store": "~14.2.3",
-    "expo-sharing": "~13.1.5",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "^5.0.10",
-    "expo-web-browser": "~14.2.0",
-    "express": "^4.21.2",
-    "FormData": "^0.10.1",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.13.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.5",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.6.0",
+    "expo": "~51.0.0",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.0",
+    "expo-constants": "~16.0.0",
+    "expo-dev-client": "~4.0.0",
+    "expo-image-picker": "~15.0.0",
+    "expo-linking": "~6.3.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
     "react-icons": "^5.5.0",
-    "react-native": "^0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-pager-view": "^6.7.1",
-    "react-native-public-ip": "^1.0.2",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-tab-view": "^4.0.5",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "concurrently": "^9.1.2",
-    "expo-module-scripts": "^4.1.9",
-    "prettier": "3.6.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
