--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.0",
     "expo": "~51.0.0",
     "expo-barcode-scanner": "~13.0.1",
+    "expo-build-properties": "^0.14.8",
     "expo-camera": "~15.0.0",
     "expo-constants": "~16.0.0",
     "expo-dev-client": "~4.0.0",
@@ -27,6 +28,7 @@
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^14.2.0",
     "react": "18.2.0",
     "react-icons": "^5.5.0",
     "react-native": "0.74.5",
