--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
-    "expo-updates": "~0.25.28"
+    "expo-updates": "~0.25.28",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
