--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.3.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -27,6 +28,7 @@
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.28",
     "expo-web-browser": "^14.2.0",
     "react": "18.2.0",
     "react-icons": "^5.5.0",
@@ -34,7 +36,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
-    "expo-updates": "~0.25.28",
+    "react-native-tab-view": "^4.2.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
