--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.3.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.6.0",
     "expo": "~51.0.0",
     "expo-barcode-scanner": "~13.0.1",
-    "expo-build-properties": "^0.14.8",
+    "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.0",
     "expo-constants": "~16.0.0",
     "expo-dev-client": "~4.0.29",
-    "expo-image-picker": "~15.0.0",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.28",
-    "expo-web-browser": "^14.2.0",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-icons": "^5.5.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-tab-view": "^4.2.0",
