--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "expo-constants": "~16.0.0",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
+    "expo-image": "^3.0.10",
     "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.28",
     "expo-web-browser": "~13.0.3",
