--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.6.0",
     "expo": "~51.0.0",
+    "expo-auth-session": "^7.0.9",
     "expo-barcode-scanner": "~13.0.1",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.0",
     "expo-constants": "~16.0.0",
+    "expo-crypto": "^15.0.7",
     "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-image": "^3.0.10",
